[package]
name = "statusline"
version = "0.2.0"
edition = "2024"
description = "Claude Code status line with rate-limit depletion forecasting"
license = "MIT"
repository = "https://github.com/michaelkrisper/claude-statusline"

[dependencies]
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
